--- a/src/app/(app)/layout.module.css
+++ b/src/app/(app)/layout.module.css
@@ -22,4 +22,6 @@
   min-height: 0;
   overflow-y: auto;
   padding: 2rem 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
